# ocrmypdf-surya

./: pyproject.toml
ocrmypdf_surya/: __init__.py  converter.py  plugin.py
